# ull-benchmarking

./: .gitignore  CMakeLists.txt  Makefile
bench/: Makefile
bench/include/: bench_result.hpp  benchmark.hpp  order_book.hpp  ring_buffer.hpp  serializer.hpp  system_info.hpp  timing.hpp
bench/include/benchmarks/: bench_ring_buffer.hpp
bench/include/policies/: index_policy.hpp  overflow_policy.hpp  prefetch_policy.hpp  storage_policy.hpp
bench/include/stats/: stats.hpp
bench/include/sys/: cpu.hpp
bench/src/: main.cpp
data/: bench_results.ullb
include/: bench_result.hpp
include/benchmarks/: bench_ring_buffer.hpp
include/policies/: index_policy.hpp  overflow_policy.hpp  prefetch_policy.hpp  storage_policy.hpp
src/: main.cpp
